--- a/skin.estuary.mod/language/resource.language.en_gb/strings.po
+++ b/skin.estuary.mod/language/resource.language.en_gb/strings.po
@@ -1334,3 +1334,11 @@ msgstr ""
 msgctxt "#40160"
 msgid "Disable zoom effect when selecting item."
 msgstr ""
+
+msgctxt "#40161"
+msgid "Show music visualisation screen when playing song"
+msgstr ""
+
+msgctxt "#40162"
+msgid "Show music visualisation screen directly when playing song."
+msgstr ""
