--- a/skin.estuary.mod/language/resource.language.de_de/strings.po
+++ b/skin.estuary.mod/language/resource.language.de_de/strings.po
@@ -615,8 +615,8 @@ msgid "Media sources widget"
 msgstr "Medienquellen Widget"
 
 msgctxt "#40014"
-msgid "Live TV widget"
-msgstr "Live TV Widget"
+msgid "Live TV widget - Channels"
+msgstr "Live TV Widget - Channels"
 
 msgctxt "#40015"
 msgid "Radios widget"
@@ -1209,3 +1209,23 @@ msgstr "Zeige Musikvisualisierung wenn ein Song gespielt wird."
 msgctxt "#40162"
 msgid "Show music visualisation screen directly when playing song."
 msgstr "Zeige Musikvisualisierung sofort wenn ein Song gespielt wird.."
+
+msgctxt "#40163"
+msgid "Skin color"
+msgstr "Farbe des Skin"
+
+msgctxt "#40164"
+msgid "Reset skin color"
+msgstr "Farbe des Skins zurücksetzen"
+
+msgctxt "#40165"
+msgid "Color"
+msgstr "Farbe"
+
+msgctxt "#40166"
+msgid "Change main theme color."
+msgstr "Ändere die Hauptfarbe des Skins"
+
+msgctxt "#40167"
+msgid "Reset theme color to default."
+msgstr "Setze die Hauptfarbe des Skins auf die Standardeinstellung zurück."
