--- a/skin.estuary.mod/language/resource.language.fr_fr/strings.po
+++ b/skin.estuary.mod/language/resource.language.fr_fr/strings.po
@@ -615,8 +615,8 @@ msgid "Media sources widget"
 msgstr "Widget sources des médias"
 
 msgctxt "#40014"
-msgid "Live TV widget"
-msgstr "Widget TV Live"
+msgid "Live TV widget - Channels"
+msgstr "Widget TV - Chaînes"
 
 msgctxt "#40015"
 msgid "Radios widget"
@@ -626,9 +626,7 @@ msgctxt "#40016"
 msgid "Pictures widget"
 msgstr "Widget images"
 
-msgctxt "#40017"
-msgid "Widget style"
-msgstr "Style du widget"
+# empty strings "40017"
 
 msgctxt "#40018"
 msgid "Video Sources"
@@ -638,17 +636,11 @@ msgctxt "#40019"
 msgid "Audio Sources"
 msgstr "Sources des médias audios"
 
-msgctxt "#40020"
-msgid "Posters"
-msgstr "Posters"
+# empty strings "40020"
 
-msgctxt "#40021"
-msgid "Thumbs"
-msgstr "Vignettes"
+# empty strings "40021"
 
-msgctxt "#40022"
-msgid "Icons"
-msgstr "Icônes"
+# empty strings "40022"
 
 msgctxt "#40023"
 msgid "Set images path"
@@ -670,9 +662,7 @@ msgctxt "#40027"
 msgid "Show artists clearlogos"
 msgstr "Afficher les logos des artistes"
 
-msgctxt "#40028"
-msgid "Path of music folder"
-msgstr "Chemin du dossier des musiques"
+# empty strings "40028"
 
 msgctxt "#40029"
 msgid "Enable Artist SlideShow addon for background"
@@ -974,21 +964,13 @@ msgctxt "#40103"
 msgid "Unwatched TV shows"
 msgstr "Séries TV non vues"
 
-msgctxt "#40104"
-msgid "Recently added unwatched episodes"
-msgstr "Episodes TV non vus ajoutés récemment"
+# empty strings "40104"
 
-msgctxt "#40105"
-msgid "Recently added unwatched movies"
-msgstr "Films non vus ajoutés récemment"
+# empty strings "40105"
 
-msgctxt "#40106"
-msgid "Hide watched episodes from recently added episodes"
-msgstr "Masquer les épisodes vus des épisodes récents"
+# empty strings "40106"
 
-msgctxt "#40107"
-msgid "Hide watched movies from recently added movies"
-msgstr "Masquer les films vus des films récents"
+# empty strings "40107"
 
 msgctxt "#40108"
 msgid "Next aired"
@@ -1086,9 +1068,7 @@ msgctxt "#40131"
 msgid "Show artists clearlogos on music library."
 msgstr "Permet d'afficher les logos des artistes sur la bibliothèque des musiques."
 
-msgctxt "#40132"
-msgid "Set location of the folder containing music."
-msgstr "Permet de définir l'emplacement du dossier contenant les musiques."
+# empty strings "40132"
 
 msgctxt "#40133"
 msgid "Show studios and recordslabels icons on library."
@@ -1147,8 +1127,8 @@ msgid "Show visualisation effects on music visualisation screen."
 msgstr "Permet d'afficher les effets de visualisation sur l'écran de visualisation de la musique."
 
 msgctxt "#40147"
-msgid "Show CDArt on music visualisation screen. 'cdart.png' file must be present in album folder."
-msgstr "Permet d'afficher le disque de l'album sur l'écran de visualisation de la musique. Le fichier 'cdart.png' doit être présent dans le dossier de l'album."
+msgid "Show CDArt on music visualisation screen."
+msgstr "Permet d'afficher le disque de l'album sur l'écran de visualisation de la musique."
 
 msgctxt "#40148"
 msgid "Show ClearArt on video OSD."
@@ -1229,3 +1209,23 @@ msgstr "Permet de changer la couleur principale du thème."
 msgctxt "#40167"
 msgid "Reset theme color to default."
 msgstr "Permet de réinitialiser la couleur par défaut du thème."
+
+msgctxt "#40168"
+msgid "Live TV widget - Recently played channels"
+msgstr "Widget TV - Chaînes vues récemment"
+
+msgctxt "#40169"
+msgid "Watched to"
+msgstr "Vu à"
+
+msgctxt "#40170"
+msgid "unwatched episodes"
+msgstr "épisodes non vus"
+
+msgctxt "#40171"
+msgid "unwatched episode"
+msgstr "épisode non vu"
+
+msgctxt "#40172"
+msgid "Watched episodes"
+msgstr "Episodes vus"
