• Add 'My TV shows airing today' on default tv shows widget • Add 'Next episodes to watch' on default tv shows widget • Add yes/no dialog window when reset skin settings • Hide hard disk usage on Android system • Changes in PVR guide • Changes in personnalise home menu • Fix widgets with horizontal menu • Improve esthetic appearance

--- a/skin.estuary.mod/language/resource.language.de_de/strings.po
+++ b/skin.estuary.mod/language/resource.language.de_de/strings.po
@@ -628,7 +628,7 @@ msgstr "Bilder Widget"
 
 msgctxt "#40017"
 msgid "Enable horizontal menu"
-msgstr ""
+msgstr "Aktiviere horizontales Menü"
 
 msgctxt "#40018"
 msgid "Video Sources"
@@ -640,7 +640,7 @@ msgstr "Audiodatei Quellen"
 
 msgctxt "#40020"
 msgid "Replace vertical home menu by horizontal menu."
-msgstr ""
+msgstr "Ersetze das vertikale Hauptmenü durch horizontales Hauptmenü."
 
 # empty strings "40021"
 
@@ -1236,4 +1236,4 @@ msgstr "gesehene Folgen"
 
 msgctxt "#40173"
 msgid "Add sources"
-msgstr ""
+msgstr "Füge Quellen hinzu"
