--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,3 +1,13 @@
+[B]1.3.0[/B]
+• Add 'My TV shows airing today' on default tv shows widget
+• Add 'Next episodes to watch' on default tv shows widget
+• Add yes/no dialog window when reset skin settings
+• Hide hard disk usage on Android system
+• Changes in PVR guide
+• Changes in personnalise home menu
+• Fix widgets with horizontal menu
+• Improve esthetic appearance
+
 [B]1.2.9[/B]
 • Add horizontal home menu
 • Add Rotten TomatoMeter and Rotten Tomatoes Audience Score for tv shows
