• Add total / watched / unwatched episodes number for tv shows and seasons • Add possibility to hide info from Rotten Tomatoes and Metacritic • Add possibility to hide clearlogos on home menu • Add flag icons on home menu and possibility to hide them • Minor fixes

--- a/skin.estuary.mod/language/resource.language.de_de/strings.po
+++ b/skin.estuary.mod/language/resource.language.de_de/strings.po
@@ -1237,3 +1237,11 @@ msgstr "gesehene Folgen"
 msgctxt "#40173"
 msgid "Add sources"
 msgstr "Füge Quellen hinzu"
+
+msgctxt "#40174"
+msgid "My TV shows airing today"
+msgstr "Meine Serien, die heute im Fernsehen laufen"
+
+msgctxt "#40175"
+msgid "Next episodes to watch"
+msgstr "Nächste Folgen"
