--- a/skin.estuary.mod/language/resource.language.fr_fr/strings.po
+++ b/skin.estuary.mod/language/resource.language.fr_fr/strings.po
@@ -1245,3 +1245,23 @@ msgstr "Mes séries TV diffusées aujourd'hui"
 msgctxt "#40175"
 msgid "Next episodes to watch"
 msgstr "Prochains épisodes à regarder"
+
+msgctxt "#40176"
+msgid "Hide Rotten Tomatoes and Metacritic info"
+msgstr "Masquer les informations Rotten Tomatoes et Metacritic"
+
+msgctxt "#40177"
+msgid "Hide info from Rotten Tomatoes and Metacritic."
+msgstr "Permet de masquer les informations provenant de Rotten Tomatoes et de Metacritic."
+
+msgctxt "#40178"
+msgid "Show media flags icons on home menu such as resolution, ratio, video codec, audio codec and number of channels."
+msgstr "Permet d'afficher les icônes d'informations des médias du menu d'accueil comme la résolution, le ratio, le codec vidéo, le codec audio et le nombre de canaux."
+
+msgctxt "#40179"
+msgid "Show media clearlogos"
+msgstr "Afficher les logos des médias"
+
+msgctxt "#40180"
+msgid "Show clearlogos on home menu."
+msgstr "Permet d'afficher les logos des médias sur le menu d'accueil."
