--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,5 +1,13 @@
+[B]1.3.2[/B]
+• Add total / watched / unwatched episodes number for tv shows and seasons
+• Add possibility to hide info from Rotten Tomatoes and Metacritic
+• Add possibility to hide clearlogos on home menu
+• Add flag icons on home menu and possibility to hide them
+• Minor fixes
+
 [B]1.3.1[/B]
 • Fix widget selection
+• Fix extendedinfo button on OSD with music videos
 
 [B]1.3.0[/B]
 • Add 'My TV shows airing today' on default tv shows widget
