--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,3 +1,13 @@
+[B]1.3.4[/B]
+• Add LibreELEC / OpenELEC settings shortcut on settings panel
+• Add LibreELEC / OpenELEC settings shortcut on home menu
+• Add a small menu in personnalise home menu to move / add / delete items
+• Add possibility to change popup notification position
+• Fix on music visualisation
+• Fix thumbs on tv shows widgets
+• Fix total / watched / unwatched episodes flag with special characters (need to use Arial font)
+• Reordering skin settings
+
 [B]1.3.3[/B]
 • Add IMDB Top 250 flag icon
 • Add possibility to change background color regardless of main skin color
