--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,3 +1,11 @@
+[B]1.3.5[/B]
+• Add new fully customizable widgets : posters, thumbs and icons
+• Add player processing info on video osd
+• Allow TVTunes to play themes
+• Fix duplicate shortcuts with home menu
+• Fix popup notification
+• Other minor fixes
+
 [B]1.3.4[/B]
 • Add LibreELEC / OpenELEC settings shortcut on settings panel
 • Add LibreELEC / OpenELEC settings shortcut on home menu
