--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,3 +1,13 @@
+[B]1.3.7[/B]
+• Add new 'Simple wall' view
+• Add possibility to hide posters info
+• Add Next Up popup for Live TV (Thanks to sualfred)
+• Add preview for select dialog
+• Add screenshots support on addon info
+• Fix seasons posters on some views
+• Fix fullscreen button with vertical menu
+• Other minor fixes
+
 [B]1.3.6[/B]
 • Fix Sources widget
 
