• Fix PVR icon • Fix next up popup for PVR

--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,3 +1,7 @@
+[B]1.3.8[/B]
+• Fix PVR icon
+• Fix next up popup for PVR 
+
 [B]1.3.7[/B]
 • Add new 'Simple wall' view
 • Add possibility to hide posters info
