--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,6 +1,7 @@
 [B]1.3.8[/B]
 • Fix PVR icon
 • Fix next up popup for PVR
+• Fix animated posters on some views
 • Replace years by artists for albums
 
 [B]1.3.7[/B]
