--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,4 +1,6 @@
 [B]1.3.8[/B]
+• Now use extrafanarts for music visualisation. Artist Slideshow addon is no longer necessary
+• Fix background opacity on music visualisation
 • Fix PVR icon
 • Fix next up popup for PVR
 • Fix animated posters on some views
