--- a/skin.estuary.mod/language/resource.language.fr_fr/strings.po
+++ b/skin.estuary.mod/language/resource.language.fr_fr/strings.po
@@ -669,12 +669,12 @@ msgstr "Afficher les logos des artistes"
 # empty strings "40028"
 
 msgctxt "#40029"
-msgid "Enable Artist SlideShow addon for background"
-msgstr "Activer l'extension Artist SlideShow pour l'arrière-plan"
+msgid "Enable extrafanarts for background"
+msgstr "Activer les extrafanarts pour l'arrière-plan"
 
 msgctxt "#40030"
-msgid "Enable Artist SlideShow addon for thumb"
-msgstr "Activer l'extension Artist SlideShow pour la vignette"
+msgid "Enable extrafanarts for thumb"
+msgstr "Activer les extrafanarts pour la vignette"
 
 msgctxt "#40031"
 msgid "Animate background"
@@ -1115,12 +1115,12 @@ msgid "Set background opacity on all over skin."
 msgstr "Permet de définir l'opacité de l'arrière-plan sur l'ensemble du thème."
 
 msgctxt "#40143"
-msgid "Show slideshow of artist fanarts on music visualisation screen. [B]Artist SlideShow[/B] addon is needed."
-msgstr "Permet d'afficher un diaporama des arrière-plans de l'artiste sur l'écran de visualisation de la musique. L'extension [B]Artist SlideShow[/B] est nécessaire."
+msgid "Show slideshow of artist fanarts on music visualisation screen."
+msgstr "Permet d'afficher un diaporama des arrière-plans de l'artiste sur l'écran de visualisation de la musique."
 
 msgctxt "#40144"
-msgid "Show slideshow of artist fanarts in thumbnail on music visualisation screen. [B]Artist SlideShow[/B] addon is needed."
-msgstr "Permet d'afficher un diaporama des arrière-plans de l'artiste dans la vignette sur l'écran de visualisation de la musique. L'extension [B]Artist SlideShow[/B] est nécessaire."
+msgid "Show slideshow of artist fanarts in thumbnail on music visualisation screen."
+msgstr "Permet d'afficher un diaporama des arrière-plans de l'artiste dans la vignette sur l'écran de visualisation de la musique."
 
 msgctxt "#40145"
 msgid "Animate background or slideshow (if enabled) on music visualisation screen."
