--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,11 +1,12 @@
 [B]1.3.8[/B]
-• Now use extrafanarts for music visualisation. Artist Slideshow addon is no longer necessary
+• Now use extrafanarts for music visualisation (Artist Slideshow addon is no longer necessary)
 • Fix background opacity on music visualisation
 • Fix PVR icon
 • Fix next up popup for PVR
 • Fix animated posters on some views
 • Fix numeric button
 • Replace years by artists for albums
+• Other minor fixes
 
 [B]1.3.7[/B]
 • Add new 'Simple wall' view
