--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,3 +1,8 @@
+[B]1.3.9[/B]
+• Add Movies/TV Shows Hubs and ability to create up to 3
+• Add last played on video info
+• Fix artist label
+
 [B]1.3.8[/B]
 • Now use extrafanarts for music visualisation (Artist Slideshow addon is no longer necessary)
 • Fix background opacity on music visualisation
